prevented navigation bar from overflowing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,10 +22,10 @@
 html {
   --color-main: #007aff;
   --color-text: #333333;
-  --color-text-lighter: #DDDDDD;
+  --color-text-lighter: #dddddd;
   --color-background: #fbfbfd;
-  --font-display: 'Trispace', sans-serif;
-  --font-text: 'Trispace', sans-serif;
+  --font-display: "Trispace", sans-serif;
+  --font-text: "Trispace", sans-serif;
 
   --nav-height: 60px;
 }
@@ -117,7 +117,7 @@ main.container > * {
 }
 
 .cover .cover__image {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: absolute;
   top: 0;
@@ -228,13 +228,12 @@ main.container > * {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 #visualization svg {
   width: 100%;
 }
-
 
 #question-container h2,
 h2 {
@@ -310,7 +309,7 @@ h2 {
   padding: 1.2rem 0 1.2rem 0;
   /* min-height: var(--nav-height); */
   display: grid;
-  grid-template-columns: repeat(6, calc(100vw / 6));
+  grid-template-columns: repeat(6, calc(100% / 6));
   /* align-items: center; */
 }
 
@@ -395,16 +394,16 @@ h2 {
 .footer__container {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  column-gap:1rem;
+  column-gap: 1rem;
 }
 
 .footer__item .logo {
   background-size: contain;
-    background-position: top left;
-    background-repeat: no-repeat;
-    display: block;
-    width: 100%;
-    height: 75px;
+  background-position: top left;
+  background-repeat: no-repeat;
+  display: block;
+  width: 100%;
+  height: 75px;
 }
 
 .logo-density {
